--- a/pympress/share/locale/pympress.pot
+++ b/pympress/share/locale/pympress.pot
@@ -1,25 +1,6 @@
-# #-#-#-#-#  pympress.pot (Pympress v1.0)  #-#-#-#-#
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the Pympress package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
-# #-#-#-#-#  glade.po (PACKAGE VERSION)  #-#-#-#-#
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
-# #-#-#-#-#  python.po (PACKAGE VERSION)  #-#-#-#-#
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Pympress v1.0\n"
+"Project-Id-Version: Pympress v1.1.2\n"
 "Report-Msgid-Bugs-To: me@cimba.li\n"
 "POT-Creation-Date: 2016-10-24 15:50+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
@@ -29,6 +10,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+
 msgid "(and optionally seconds)"
 msgstr ""
 
@@ -131,6 +113,12 @@ msgstr ""
 msgid "PDF files"
 msgstr ""
 
+msgid "Pause"
+msgstr ""
+
+msgid "Play"
+msgstr ""
+
 msgid "Pointer"
 msgstr ""
 
@@ -138,6 +126,9 @@ msgid "Presenter fullscreen"
 msgstr ""
 
 msgid "Pympress Content"
+msgstr ""
+
+msgid "Pympress Presenter"
 msgstr ""
 
 msgid "Pympress can not extract attached file"
@@ -174,6 +165,9 @@ msgid "Slide number"
 msgstr ""
 
 msgid "Some preferences are saved in "
+msgstr ""
+
+msgid "Stop"
 msgstr ""
 
 msgid "The estimated (intended) talk time in minutes"
@@ -312,9 +306,6 @@ msgid "no action defined for this link!"
 msgstr ""
 
 msgid "pympress is a little PDF reader written in Python using Poppler for PDF rendering and GTK for the GUI.\n"
-msgstr ""
-
-msgid "pympress presenter"
 msgstr ""
 
 msgid "video support is disabled"
